--- a/style.css
+++ b/style.css
@@ -18,3 +18,7 @@ html, body {
             padding: 12px 12px 12px 12px; 
             margin: 10px; 
             }
+
+.recipe-title {font-size:  1.2rem;  
+}
+
