--- a/style.css
+++ b/style.css
@@ -20,17 +20,14 @@ ul {list-style-type: none;
   margin: 0;
   padding: 0;}
 
-/* w3 selector a */
+nav li {float: left;}
 
-.hor-navbar {float: left;
-            display: block;
+nav a {display: block;
             padding: 10px;
             background-color: #a8d7cd;
             }
 
-.hor-navbar:hover {background-color: #97c4ba ;}
-
-
+nav a:hover {background-color: #97c4ba ;}
 
 
 .recipe-box {border: 2px solid #e1d6d6;
